--- a/files/basic-html/page19.html
+++ b/files/basic-html/page19.html
@@ -167,12 +167,7 @@ function MM_swapImage() { //v3.0
 
 
 
-      FRI
-                                                    CREDITS: This presentation template was created
-                                                by ​Slidesgo​,  including icons by Flaticon​, infographics &
-                                                                    images by ​Freepik
-
-                                                         Please keep this slide for attribution</code></pre>
+      FRI</code></pre>
      	</div>
     
      </div>
@@ -182,9 +177,9 @@ function MM_swapImage() { //v3.0
            <tr>
              <td width="22%" height="44"><a href="page18.html"><img src="images/previous.png" width="26" height="19" id="Image2" onmouseover="MM_swapImage('Image2','','images/previous2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
              <td width="43%">
-             	&nbsp;&nbsp;&nbsp;<a href="page14.html">14</a>&nbsp;&nbsp;&nbsp;<a href="page15.html">15</a>&nbsp;&nbsp;&nbsp;<a href="page16.html">16</a>&nbsp;&nbsp;&nbsp;<a href="page17.html">17</a>&nbsp;&nbsp;&nbsp;<a href="page18.html">18</a>&nbsp;&nbsp;&nbsp;<a href="page19.html">19</a>
+             	&nbsp;&nbsp;&nbsp;<a href="page14.html">14</a>&nbsp;&nbsp;&nbsp;<a href="page15.html">15</a>&nbsp;&nbsp;&nbsp;<a href="page16.html">16</a>&nbsp;&nbsp;&nbsp;<a href="page17.html">17</a>&nbsp;&nbsp;&nbsp;<a href="page18.html">18</a>&nbsp;&nbsp;&nbsp;<a href="page19.html">19</a>&nbsp;&nbsp;&nbsp;<a href="page20.html">20</a>
              </td>
-             <td width="35%"><a href=""><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
+             <td width="35%"><a href="page20.html"><img src="images/next.png" width="26" height="19" id="Image1" onmouseover="MM_swapImage('Image1','','images/next2.png',1)" onmouseout="MM_swapImgRestore()" /></a></td>
            </tr>
          </table>
        </div>
@@ -197,7 +192,7 @@ function MM_swapImage() { //v3.0
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p><a href=""><img src="images/next_big.png" width="90" height="80" /></a></p>
+  <p><a href="page20.html"><img src="images/next_big.png" width="90" height="80" /></a></p>
 </div>
 
 
